@@ -5,6 +5,9 @@ Release 5.1.2 (Unreleased)
 Bug fixes
 ---------
 
+- Fix synchro. of order 3 tensor in iterative tensor gradient in case of
+  periodicity of rotation.
+
 - Fix crash and errors in MED output with subdivided polyhedral
   or polygonal elements when running in parallel.
 
